2016.05.18 Kentaro Fukuchi <kentaro@fukuchi.org>
	* acinclude.m4:
	  - iconv.m4 has been updated to serial 19.

2016.05.15 Kentaro Fukuchi <kentaro@fukuchi.org>
	* configure.ac:
	  - Merged pull-request #80. (Thanks to @EckoEdc)
	  - Add LDFLAGS for mingw compilation.

2016.04.02 Kentaro Fukuchi <kentaro@fukuchi.org>
	* tests/common.h:
	  - Code refactoring.
	  - New debug functions have been added.
	* tests/decoder.[ch], tests/test_monkey.c:
	  - QRcode_extractBits() has been extended. This will be used later.
	* tests/decoder.[ch]:
	  - eccResult has been added to QRdata.
	  - Code refactoring.
	* tests/decoder.[ch], tests/datachunk.[ch], tests/Makefile.am:
	  - Code refactoring.

2016.03.30 Kentaro Fukuchi <kentaro@fukuchi.org>
	* bitstream.[ch], tests/test_bitstream.c:
	  - Added new function BitStream_newWithBits() and tests for it.
	* tests/decoder.[ch], tests/test_monkey.c:
	  - Code refactoring.

2016.03.29 Kentaro Fukuchi <kentaro@fukuchi.org>
	* tests/view_qrcode.c:
	  - Added mask=-2 mode for debug purpose.
	* bitstream.c, qrencode.c:
	  - Incorrect bit padding has been fixed. (Thanks to Yuji Ueno)
	* tests/test_bitstream.c, tests/test_qrencode.c:
	  - Incorrect bit padding has been fixed.
	* README:
	  - ACKNOWLEDGMENTS has been updated.
	* README.md:
	  - ACKNOWLEDGMENTS has been updated.
	  - Some missed contributors have been added to README.md.

2016.02.21 Kentaro Fukuchi <kentaro@fukuchi.org>
	* configure.ac, tests/common.h, tests/view_qrcode.c:
	  - Migrated from SDL 1.2 to 2.0.
	* README, README.md:
	  - Improved the install instruction. (Thanks to Ronald Michaels)

2015.11.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrspec.h, mqrspec.h:
	  - Typo fix. (Thanks to @qianchenglenger)
	* qrenc.c:
	  - Merged pull-request #74. (Thanks to @mgorny)
	  - Added support for UTF8i and ANSIUTF8i formats that provide reverse
	    mappings of UTF8 and ANSIUTF8 formats respective. This is useful for
		black-on-white media.