@@ -1,6 +1,8 @@
 2016.05.18 Kentaro Fukuchi <kentaro@fukuchi.org>
 	* acinclude.m4:
 	  - iconv.m4 has been updated to serial 19.
+	* configure.ac, Makefile.am, tests/Makefile.am:
+	  - MinGW support has been improved.
 
 2016.05.15 Kentaro Fukuchi <kentaro@fukuchi.org>
 	* configure.ac:
